# sitewatcher2-client

./: .gitignore  CLAUDE.md  Dockerfile  README.md  _env  install.sh  pyproject.toml  setup.cfg
schedule/: crontab  sw2.cron.daily
src/sw2/: add.py  collect.py  config.py  delete.py  disable.py  enable.py  env.py  formatter.py  func.py  list.py  main.py  ping.py  rename.py  resource.py  resources.py  test.py  util.py
src/sw2/channel/: __init__.py  add.py  command_add.py  command_add_device.py  command_add_directory.py  command_add_site.py  command_collect.py  command_delete.py  command_delete_device.py  command_delete_directory.py  command_delete_site.py  command_list.py  command_refresh.py  command_rename.py  command_resources.py  command_set_device.py  command_set_directory.py  command_set_site.py  command_share.py  command_timestamps.py  delete.py  device.py  disable.py  enable.py  interface_msteams.py  interface_slack.py  list.py  rename.py
src/sw2/directory/: __init__.py  add.py  collect.py  command_add.py  command_copy.py  command_delete.py  command_disable.py  command_enable.py  command_list.py  command_refresh.py  command_rename.py  command_resources.py  command_set.py  command_sites.py  command_test.py  command_unset.py  command_update.py  command_variables.py  delete.py  disable.py  enable.py  func_disable.py  func_sites.py  func_unset.py  func_variables.py  list.py  metadata.py  rename.py  set.py  sites.py  status.py  unset.py  update.py  variables.py
src/sw2/site/: __init__.py  add.py  collect.py  command_add.py  delete.py  (+36 more)
tests/: test_directory.py
(+11 files in other folders)
