[metadata]
name = sitewatcher2-client
version = 0.1.0
author = Miki Yutani
author_email = mkyutani@gmail.com
description = Sitewatcher2 Client Tools
long_description = file: README.md
keywords = sitewatcher,web site,watch
license = MIT License

[options]
zip_safe = False
package_dir = =src
packages = find:
install_requires =
    requests
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sw2=sw2.main:main